--- a/components/molecules/navbar/style.module.scss
+++ b/components/molecules/navbar/style.module.scss
@@ -10,7 +10,7 @@
     @include media-max-width($mobile-breakpoint) {
         display: none;
     }
-    @include global-gap();
+    @include header-gap();
 
     &_left {
         justify-content: flex-start;
