--- a/components/templates/about/style.module.scss
+++ b/components/templates/about/style.module.scss
@@ -1,7 +1,7 @@
 .about {
     color: #fff;
-    height: 23.5rem;
+    height: 15.5rem;
     display: flex;
 
-    align-items: center;
+    align-items: flex-end;
 }
